--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,9 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Nunito|Proza+Libre|Rubik');
+
+
+
 
 // Variables
 @import 'variables';
