--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -36,3 +36,5 @@ $input-btn-padding-x:         .6rem;
 $input-btn-font-family:       'Proza Libre', "Nunito", sans-serif;;
 $input-btn-font-size:         $font-size-base * 1.2;
 
+
+// custom variables here
