--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -11,6 +11,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// custom style here
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
